# telegram-inline-keyboard-builder

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: publish.yml  python-publish.yml
adapters/: node-telegram.adapter.js  telegraf.adapter.js
api/js/: README.md  package.json
api/js/adapters/: puregram.adapter.js  telebot.adapter.js
api/js/builders/: InlineKeyboardNodeTelegram.js  InlineKeyboardPuregram.js  InlineKeyboardTelebot.js  InlineKeyboardTelegraf.js
api/js/core/: InlineKeyboardBuilder.js
api/python/: README.md  pyproject.toml
api/python/adapters/: aiogram_adapter.py  ptb_adapter.py  pyrogram_adapter.py
api/python/builders/: inline_keyboard_aiogram.py  inline_keyboard_ptb.py  inline_keyboard_pyrogram.py
api/python/core/: InlineKeyboardBuilder.py
api/python/telegram_inline_keyboard_builder/: __init__.py
api/python/telegram_inline_keyboard_builder/core/: builder.py
