[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "telegram-inline-keyboard-builder"
version = "2.0.0"

description = "Library-agnostic universal inline keyboard builder for python Telegram bots APIs"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "neoncraftx", email = "neoncraftx@gmail.com" }
]
requires-python = ">=3.8"

keywords = [
  "telegram",
  "telegram-bot",
  "inline-keyboard",
  "aiogram",
  "pyrogram",
  "python-telegram-bot",
  "builder"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications :: Chat"
]


[project.urls]
Homepage = "https://github.com/neoncraftx/telegram-inline-keyboard-builder"
Repository = "https://github.com/neoncraftx/telegram-inline-keyboard-builder"
Issues = "https://github.com/neoncraftx/telegram-inline-keyboard-builder/issues"

[tool.setuptools.packages.find]
where = ["."]